--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,9 @@
     <string name="main_search_title">Search</string>
     <string name="main_add_title">Add</string>
     <string name="main_deleteDatabase_title">Delete Database</string>
+    <string name="search_title">Enter name</string>
+    <string name="add_friend_title">Add Friend</string>
+    <string name="edit_friend_title">Edit Friend</string>
+    <string name="search_friend_title">Search Friends</string>
 
 </resources>
